--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SWPS - GTPS</title>
+  <title>BLOOPTOPIA - GTPS</title>
   <link href="https://fonts.googleapis.com/css2?family=Rammetto+One&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -29,13 +29,10 @@
       text-align: center;
       transition: background 0.5s, color 0.5s;
     }
-    h1 {
-      font-family: 'Rammetto One', cursive;
-      font-size: 3rem;
-      background: linear-gradient(90deg, #00bcd4, #4caf50);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      margin-bottom: 1rem;
+    h1 img {
+      max-width: 400px;
+      width: 100%;
+      height: auto;
     }
     .status-box {
       margin-bottom: 1.5rem;
@@ -118,7 +115,11 @@
 </head>
 <body>
   <button class="theme-toggle" onclick="toggleTheme()">🌙</button>
-  <h1>SWPS</h1>
+  
+  <!-- Logo BLOOPTOPIA -->
+  <h1>
+    <img src="blooptopia.png" alt="BLOOPTOPIA">
+  </h1>
 
   <div class="status-box">
     🟢 Status Server: Online
@@ -179,7 +180,7 @@
   </div>
 
   <div class="footer-info">
-    © 2025 SWPS. Created by Azazil. Built on the Growsoft Platform.
+    © 2025 BLOOPTOPIA. Created by Azazil. Built on the Growsoft Platform.
   </div>
 
   <script>
