--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
   
   <!-- Logo BLOOPTOPIA -->
   <h1>
-    <img src="blooptopia.png" alt="BLOOPTOPIA">
+    <img src="Blooptopia.png" alt="BLOOPTOPIA">
   </h1>
 
   <div class="status-box">
